--- a/menu-black-ipa-violin.html
+++ b/menu-black-ipa-violin.html
@@ -116,7 +116,7 @@
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            dsq.src = '//' + disqus_shortname + 'beerstrot.disqus.com/embed.js';
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
@@ -270,7 +270,6 @@
      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/fb.js"></script>
-    <script src="js/disqus.js"></script>
+    <script src="js/fb.js"></script>  
 </body>
 </html>
