--- a/contatti.html
+++ b/contatti.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
+<!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
+<html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 
 <head>
     <meta charset="utf-8"/>
