--- a/menu-battuto-di-vitello.html
+++ b/menu-battuto-di-vitello.html
@@ -153,7 +153,7 @@
             <div class="large-4 medium-4 columns">
                 <span class="fi-social-facebook icon-font-style"></span>
                 <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
-                <a href="#">Seguici su Facebook</a>
+                <a href="https://www.facebook.com/cavecchiabeerstrot">Seguici su Facebook</a>
             </div>
         </div>
     </footer>
