--- a/team-giovanni-attilio.html
+++ b/team-giovanni-attilio.html
@@ -174,7 +174,7 @@
             <div class="large-4 medium-4 columns">
                 <h1 class="fi-social-facebook icon-font-style"></h1>
                 <p>Aggiornamenti quotidiani sulle birre e su tutte le attività in Beerstrot. Fai parte della community.</p>
-                <a href="#">Seguici su Facebook</a>
+                <a href="https://www.facebook.com/cavecchiabeerstrot">Seguici su Facebook</a>
             </div>
         </div>
     </footer>
