--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="divider"></li>
                 <li><a href="contatti.html">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog/index.html">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -50,7 +50,7 @@
         <div class="row text-highlight show-for-small extra-space-hero">
             <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <div>
-                    <h3>Dove siamo</h3>
+                    <h3>Dove Siamo</h3>
                     <h4>
                         <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                             <span itemprop="streetAddress">Via Centofinestre, 20</span>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
-                <h3>Prenota un tavolo</h3>
+                <h3>Prenota</h3>
                 <h5>
                     <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
                 </h5>
@@ -261,10 +261,16 @@
     </footer>
     <footer class="panel-footer">
         <div class="row">
-            <div class="small-6 medium-4 large-4 columns">
+            <div class="small-6 medium-3 large-3 columns">
+                <h4 class="subheader">Prenota</h4>
+                <p>
+                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                </p>
+            </div>
+            <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Dove Siamo</h4>
                 <p>
-                    <a href="http://maps.google.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                    <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                         <span itemprop="streetAddress">Via Centofinestre, 20</span>
                         <br>
                         <span itemprop="postalCode">60024</span>
@@ -275,83 +281,29 @@
                     </a>
                 </p>
             </div>
-            <div class="small-6 medium-4 large-4 columns clearfix">
-                <h4 class="subheader">Riserva Tavolo</h4>
-                <p>
-                    <a href="tel:+393385071940">
-                        <span itemprop="telephone">+39 338 507 1940</span>
-                    </a>
-                </p>
-                <!-- <p>
-                    <a href="mailto:info@beerstrot.it">
-                        <span itemprop="email">info@beerstrot.it</span>
-                    </a>
-                </p> -->
-            </div>
-            <div class="small-12 medium-4 large-4 columns">
+            <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
                 <meta itemprop="openingHours" content="Sa 18:00-01:00">
                 <meta itemprop="openingHours" content="Su 12:00-22:00">
-                <p> Mar&#8202;&ndash;&#8202;Ven: 12:00&ensp;&ndash;&ensp;14:00 | 18:00&ensp;&ndash;&ensp;00:00 <br>
+                <p> 
+                Mar&#8202;&ndash;&#8202;Ven: 12:00&ensp;&ndash;&ensp;14:00<br>
+                Mar&#8202;&ndash;&#8202;Ven: 18:00&ensp;&ndash;&ensp;00:00<br>
                 Sab: 18:00&ensp;&ndash;&ensp;01:00 <br>
                 Dom: 12:00&ensp;&ndash;&ensp;22:00 <br></p>
                 <p><em>Chiuso il Lunedì</em></p>
             </div>
-            <!-- <div class="small-6 medium-3 large-3 columns end">
-                <h4 class="subheader">Prenota</h4>
-                <p><a role="button" href="#" class="button tiny " data-reveal-id="prenota-online">Prenota un tavolo</a></p>
-                <div id="prenota-online" class="reveal-modal" data-reveal>
-                    <a class="close-reveal-modal"> &#215; </a> 
-                    <form action="input">
-                        <div class ="row">
-                            <div class="small-5 medium-2 large-2 columns">  
-                                <label>Persone
-                                    <select>
-                                      <option value="1">1</option>
-                                      <option value="2">2</option>
-                                      <option value="3">3</option>
-                                      <option value="4">4</option>
-                                      <option value="5">5</option>
-                                      <option value="6">6</option>
-                                      <option value="7">7</option>
-                                      <option value="8">8</option>
-                                    </select>
-                                  </label>
-                            </div>
-                        </div>
-                        <div class ="row">
-                            <div class="small-7 medium-4 large-3 columns">  
-                                <label>Data
-                                    <input type="date" placeholder="" />
-                                  </label>
-                            </div>
-                            <div class="small-5 medium-3 large-2 columns end">  
-                                <label>Ora
-                                    <input type="time" placeholder="" />
-                                  </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="small-12 medium-5 large-6 columns">  
-                                <label>Nome e Cognome
-                                    <input type="text" placeholder="Nome Cognome" />
-                                </label>
-                            </div>
-                            <div class="small-12  medium-7 large-6 columns">  
-                                <label>Email
-                                    <input type="email" placeholder="email" />
-                                  </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="small-12 medium-12 large-12 columns end">
-                                <a role="button" href="#" class="button extra-space-button">Prenota e ricevi conferma</a>
-                            </div> 
-                        </div>
-                    </form>  
-                </div> -->
+            <div class="small-6 medium-3 large-3 columns">
+                <h4 class="subheader">Accettiamo Carte</h4>
+                <ul class="small-block-grid-2 medium-block-grid-2 large-block-grid-2">
+                    <li>
+                        <img class="img-cards" src="img/svgs/visa.svg" alt="visa">
+                    </li>
+                    <li>
+                        <img class="img-cards" src="img/svgs/mastercard.svg" alt="mastercard">
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
