--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="divider"></li>
                 <li><a href="contatti.html">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="blog">Blog</a></li>
+                <li><a href="blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
