--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
-                <h4 class="subheader">Dove Siamo</h4>
+                <h4 class="subheader">Dove siamo</h4>
                 <p>
                     <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                         <span itemprop="streetAddress">Via Centofinestre, 20</span>
@@ -295,7 +295,7 @@
                 <p><em>Chiuso il Lunedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
-                <h4 class="subheader">Accettiamo Carte</h4>
+                <h4 class="subheader">Paga con</h4>
                 <ul class="small-block-grid-3 medium-block-grid-3 large-block-grid-3">
                     <li>
                         <img class="img-cards" src="http://beerstrot.github.io/img/svgs/visa.svg" alt="Visa">
